--- a/test/index.html
+++ b/test/index.html
@@ -10,8 +10,7 @@
     <meta http-equiv="pragma" content="no-cache" />
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate, private" />
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; frame-src 'self'; img-src 'self' data:; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' blob:; connect-src 'self' ws: wss:;" />
-
-    <script type="module" async>
+    <script type="module" defer>
       import Model from '../src/Model.js';
       import {present} from '../src/Presenter.js';
 
