--- a/app/index.html
+++ b/app/index.html
@@ -10,17 +10,18 @@
     <meta http-equiv="pragma" content="no-cache" />
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate, private" />
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; frame-src 'self'; img-src 'self' data:; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' blob:; connect-src 'self' ws: wss:;" />
-    <script type="module" defer>
+    <script type="module" async>
       import Model from '../src/Model.js';
-      import {present} from '../src/Presenter.js';
+      import Backend from '../src/Backend.js';
+      import TestApp from './TestApp.js';
 
-      const app = new Model();
-      app['rdfs:label'] = 'Тестовое приложение';
+      const backend = new Backend();
+      await backend.authenticate('veda', 'a665a45920422f9d417e4867efdc4fb8a04a1f3fff1fa07e998e86f7f7a27ae3');
 
-      present(app, '#app');
+      customElements.define('test-app', TestApp);
     </script>
   </head>
   <body>
-    <div id="app"></div>
+    <test-app about="d:TestApplication"></test-app>
   </body>
 </html>
