--- a/app/index.html
+++ b/app/index.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html lang="en" class="notranslate" translate="no">
   <head>
+    <link rel="shortcut icon" href="./favicon.ico"/>
     <meta name="google" content="notranslate"/>
     <meta charset="utf-8"/>
-    <title>Veda</title>
+    <title>Test</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="description" content=""/>
     <meta name="author" content=""/>
     <meta http-equiv="pragma" content="no-cache" />
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate, private" />
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; frame-src 'self'; img-src 'self' data:; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' blob:; connect-src 'self' ws: wss:;" />
+  </head>
+  <body>
+    <test-app about="d:TestApplication"></test-app>
     <script type="module" async>
-      import Model from '../src/Model.js';
+      import TestAppComponent from './TestAppComponent.js';
       import Backend from '../src/Backend.js';
-      import TestApp from './TestApp.js';
 
       const backend = new Backend();
       await backend.authenticate('veda', 'a665a45920422f9d417e4867efdc4fb8a04a1f3fff1fa07e998e86f7f7a27ae3');
 
-      customElements.define('test-app', TestApp);
+      customElements.define('test-app', TestAppComponent);
     </script>
-  </head>
-  <body>
-    <test-app about="d:TestApplication"></test-app>
   </body>
 </html>
