--- a/app/index.html
+++ b/app/index.html
@@ -13,15 +13,21 @@
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; frame-src 'self'; img-src 'self' data:; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' blob:; connect-src 'self' ws: wss:;" />
   </head>
   <body>
-    <test-app about="d:TestApplication"></test-app>
+    <main></main>
+    <!--test-app about="d:TestApplication"></test-app-->
     <script type="module" async>
       import TestAppComponent from './TestAppComponent.js';
+      import Model from '../src/Model.js';
       import Backend from '../src/Backend.js';
 
       const backend = new Backend();
       await backend.authenticate('veda', 'a665a45920422f9d417e4867efdc4fb8a04a1f3fff1fa07e998e86f7f7a27ae3');
 
       customElements.define('test-app', TestAppComponent);
+      const app = new Model("d:TestApplication");
+      const component = document.createElement('test-app');
+      component.model = app;
+      document.querySelector('main').append(component);
     </script>
   </body>
 </html>
