--- a/app/index.html
+++ b/app/index.html
@@ -14,11 +14,10 @@
   </head>
   <body>
     <main></main>
-    <!--test-app about="d:TestApplication"></test-app-->
     <script type="module" async>
+      import Backend from '../dist/Backend.js';
+      import Model from '../dist/Model.js';
       import TestAppComponent from './TestAppComponent.js';
-      import Model from '../src/Model.js';
-      import Backend from '../src/Backend.js';
 
       const backend = new Backend();
       await backend.authenticate('veda', 'a665a45920422f9d417e4867efdc4fb8a04a1f3fff1fa07e998e86f7f7a27ae3');
