setup build scripts

--- a/app/index.html
+++ b/app/index.html
@@ -15,8 +15,7 @@
   <body>
     <main></main>
     <script type="module" async>
-      import Backend from '../src/Backend.js';
-      import Model from '../src/Model.js';
+      import {Backend, Model} from '../dist/index.js';
       import TestAppComponent from './TestAppComponent.js';
 
       const backend = new Backend();
