relation component using slots

--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
   <body>
     <main></main>
     <script type="module" async>
-      import {Backend, Router} from '../dist/index.js';
+      import {Backend, Router} from '../src/index.js';
       import './routes.js';
 
       const backend = new Backend();
