--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,7 @@
     <script type="module" async>
       import {Backend, Router} from '../src/index.js';
       import './routes.js';
+      import './install_sw.js';
 
       const backend = new Backend();
       await backend.authenticate('veda', 'a665a45920422f9d417e4867efdc4fb8a04a1f3fff1fa07e998e86f7f7a27ae3');
