Remove <template> element support from framework
- Remove support for <template> wrapper in Loop, If, Property, and Relation components
- Update TypeScript definitions to reflect changes
- Update documentation (API.md, MIGRATION.md) - remove all <template> references
- Update examples to use direct HTML instead of <template> wrappers
- Remove test-template-syntax.html and test-template-syntax.js files
- Update related tests to remove <template> usage
- Keep internal 'template' field for passing innerHTML to child components

--- a/examples/property-relation.html
+++ b/examples/property-relation.html
@@ -143,7 +143,7 @@
           <p>
             <strong>Tags (multiple values):</strong><br>
             <span property="v-s:tags" class="tag-list">
-              <template><span class="tag"><slot></slot></span></template>
+              <span class="tag"><slot></slot></span>
             </span>
             <button onclick="{addTag}">Add Tag</button>
           </p>
@@ -202,13 +202,11 @@
           </p>
 
           <div rel="v-s:hasProject">
-            <template>
-              <div class="relation-item">
-                <strong property="v-s:title"></strong>
-                (<span property="v-s:status"></span>)
-                <button onclick="{removeProject}" data-id="{this.model.id}">Remove</button>
-              </div>
-            </template>
+            <div class="relation-item">
+              <strong property="v-s:title"></strong>
+              (<span property="v-s:status"></span>)
+              <button onclick="{removeProject}" data-id="{this.model.id}">Remove</button>
+            </div>
           </div>
 
           <p><small>Relation components automatically update when related objects change</small></p>
